style.css
body {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: freight-text-pro, serif;
    font-weight: 300;   
    font-style: normal;
}
p {font-family: freight-text-pro, serif;
    font-weight: 300;   
    font-style: normal;
    font-size: 20px;
    margin-top: 50px;
    margin-bottom: 50px;
    margin-left: 50px;
    margin-right: 50px;
}
#logowrapper {
    height: 300px;
    text-align: center;
}
#yorkilogo {
    height: 300px;
}
#headwrapper {
    height: 40px;
    position: relative;
    text-align: center;
}
#header {
    width: 100%;
    height: 50px;
    background-color: white;
    border-bottom: 1px solid black;
    border-top: 1px solid black;
    font-size: 30px;
    text-align: center;
    color: black;
    padding-top: 5px;
    font-family: acumin-pro-semi-condensed, sans-serif;
    font-weight: 200;
    font-style: normal;
    font-size: 25px;
    -webkit-transition: top 0.1s ease;
    -moz-transition: top 0.1s ease;
    -o-transition: top 0.1s ease;
    transition: top 0.1s ease;
}
.sticky {
    position: fixed;
    top: 0;
    box-shadow: 0 5px 10px rgba(154,160,185,.05), 0 15px 40px rgba(166,173,201,.2);
}
#navlinks {
    display: flex;
    list-style-type: none;
    justify-content: space-between;
    margin: 0;
    padding: 0px 0px 0px 0px;
}
#navlinks li {
    border-left: 0.25px solid black;
    border-right: 0.25px solid black;
    height: 35px;
    flex: 2;
}

h2 {font-family: acumin-pro-semi-condensed, sans-serif;
    font-size: 20px;
    font-style: italic;
    color: #003366;}

h1 {font-family: acumin-pro-semi-condensed, sans-serif;
    text-align: center;
    font-size: 45px;
    font-weight: 500;
    color: #003366;
    padding-top: 35px}

* {box-sizing: border-box}
body {font-family: Verdana, sans-serif; margin:0}
.mySlides {display: none}
img {vertical-align: middle;}

/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;
}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
  right: 0;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}


/* Fading animation */
.fade {
  -webkit-animation-name: fade;
  -webkit-animation-duration: 1.5s;
  animation-name: fade;
  animation-duration: 1.5s;
}

@-webkit-keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

@keyframes fade {
  from {opacity: .4} 
  to {opacity: 1}
}

/* On smaller screens, decrease text size */
@media only screen and (max-width: 300px) {
  .prev, .next,.text {font-size: 11px}
}

#aboutlist {margin-top: -20px;
            margin-bottom: 50px;
            margin-left: 50px;
            margin-right: 50px;}

body ul li a:link {text-decoration: none;
                    color:black;}
body ul li a:visited {text-decoration: none;
                    color:black;}
body ul li a:hover {text-decoration: none;
                    color:black;}

footer {display: flex;
		 padding: 10px;
		 clear: both;
        border-top: 1px solid #000000;
}

footer h2 {font-family: acumin-pro-semi-condensed, sans-serif;
            font-size: 20px;
            font-weight: 500;
            color: #003366;}

#footermap {flex: 3;
            margin-left: 75px;
            padding-top: 20px;}
#footercontact {flex: 3;
                border-right: 0.75px solid #000000;}
#footersocial {flex: 2;
                border-right: 0.75px solid #000000
            }
#footernav {flex: 2;
            margin-right: 50px;}

